--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "gregory@dappuniversity.com",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "4.1.3",
-    "chai": "^4.1.2",
+    "bootstrap": "5.2.3",
+    "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
-    "lite-server": "^2.3.0",
-    "nodemon": "^1.17.3",
-    "truffle": "5.0.2",
+    "chai-bignumber": "^3.1.0",
+    "lite-server": "^2.6.1",
+    "nodemon": "^2.0.20",
+    "truffle": "^5.7.0",
     "truffle-contract": "3.0.6"
   }
 }
